--- a/css/css.css
+++ b/css/css.css
@@ -54,24 +54,28 @@ body{
   list-style-type: none;
   padding: 10px 16px;
 }
+#section1{
+  margin-bottom: 400px;
+}
 .background-image{
   background: url("../assets/background.png");
   height: 90vh;
   max-height: 800px;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
   color: white;
+  position: relative;
 }
 .first-green-back{
   background: #80ff00;
   font-size: 40px;
   padding: 5px 50px;
-  margin-right: 20px;
+  margin-right: 40px;
   margin-bottom: 10px;
 
 }
@@ -83,9 +87,16 @@ body{
   font-size: 90px;
   font-weight: bold;
   padding: 6px 50px;
-  margin-right: 20px;
-  margin-bottom: 40px;
+  margin-right: 40px;
+  margin-bottom: 105px;
 }
 .second-green-back p{
   white-space: pre;
+}
+.wave{
+  position: absolute;
+  bottom: -100px;
+}
+.wavephoto{
+  width: 100%;
 }
