--- a/css/css.css
+++ b/css/css.css
@@ -100,3 +100,134 @@ body{
 .wavephoto{
   width: 100%;
 }
+#about{
+  margin-bottom: 200px;
+}
+.yellow-lines-header{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.yellow-line{
+object-fit: contain;
+width: 15%;
+
+}
+.text-beetwen-lines{
+  font-size: 60px;
+  font-weight: bold;
+  padding: 0px 13px;
+}
+.about-us{
+  margin-top: 80px;
+}
+.photowrap{
+  position: relative;
+}
+.blue-back{
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  z-index: -1;
+}
+.school-photo{
+  width: 100%;
+}
+.about-text{
+  font-size: 24px;
+  font-weight: lighter;
+}
+.button-wrap{
+  display: flex;
+  justify-content: flex-end;
+}
+.button1{
+  border-radius: 50px;
+  padding: 5px 35px;
+  font-weight: bold;
+  font-size: 24px;
+  white-space: nowrap;
+}
+
+
+.kid-background{
+  background: url("../assets/kid-back.png");
+  height: 90vh;
+  max-height: 800px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+
+}
+.filter-wrap{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+}
+.filter1{
+  flex:1;
+  background: #80ff00;
+
+
+}
+.filter2{
+  flex:1;
+  background: white;
+
+}
+.wave-up{
+  position: absolute;
+  top: -125px;
+}
+.wave-down{
+  position: absolute;
+  bottom: -125px;
+}
+.wavephoto-up{
+  width: 100%;
+}
+.white-lines-header{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+.white-line{
+object-fit: contain;
+width: 15%;
+
+}
+.text-beetwen-lines-team{
+  font-size: 60px;
+  font-weight: bold;
+  padding: 0px 13px;
+  color:white;
+}
+.three-image{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  z-index: 4;
+}
+.students{
+  width: 100%;
+}
+.images > img {
+  width: 196px;
+  margin: 0px 25px;
+}
+
+.team-desc {
+  text-align: center;
+}
