--- a/css/css.css
+++ b/css/css.css
@@ -160,7 +160,7 @@ width: 15%;
   background-repeat: no-repeat;
   position: relative;
   display: flex;
-  justify-content: space-around;
+  justify-content:space-around;
   align-items: center;
   flex-direction: column;
 
@@ -186,11 +186,11 @@ width: 15%;
 }
 .wave-up{
   position: absolute;
-  top: -125px;
+  top: -6px;
 }
 .wave-down{
   position: absolute;
-  bottom: -125px;
+  bottom: 0px;
 }
 .wavephoto-up{
   width: 100%;
@@ -201,10 +201,23 @@ width: 15%;
   justify-content: center;
   align-items: center;
   z-index: 3;
+  margin-top: 45px;
+}
+.wrap{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.p-under-header{
+  color:white;
+  font-size: 28px;
+  text-align: center;
 }
 .white-line{
 object-fit: contain;
-width: 15%;
+width: 20%;
 
 }
 .text-beetwen-lines-team{
@@ -215,19 +228,113 @@ width: 15%;
 }
 .three-image{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 4;
+}
+.three-image-wrap{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 .students{
   width: 100%;
 }
 .images > img {
-  width: 196px;
-  margin: 0px 25px;
+  width: 250px;
+  margin: 0px 65px 30px 65px;
 }
 
 .team-desc {
   text-align: center;
+  font-weight: bold;
+  font-size: 24px;
+}
+.work-text{
+  font-weight: normal;
+  color:#80ff00;
+}
+.whole-team-text{
+
+  z-index: 4;
+  margin-top: 50px;
+}
+.whole-team-text-link{
+  color: #80ff00;
+  font-size: 24px;
+}
+.fun-background{
+  background: url("../assets/fun.png");
+  height: 90vh;
+  max-height: 800px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.groups-header-string{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.zigzak-string{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.text-under-zigzak{
+  text-align: center;
+  color:000;
+  font-size: 28px;
+}
+.groups-level{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.dupa{
+  flex:1;
+  width: 100%;
+  height: 100%;
+}
+.level-photo1{
+  background-image: url("../assets/aqua-car.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+}
+.level-photo2{
+  background-image: url("../assets/blue-car.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+
+}
+.level-photo3{
+  background-image: url("../assets/orange-car.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+}
+.level-photo4{
+  background-image: url("../assets/green-car.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+}
+.level-photo5{
+  background-image: url("../assets/yellow-car.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+
 }
