--- a/css/css.css
+++ b/css/css.css
@@ -20,6 +20,10 @@ body{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0px;
+}
+.menu ul{
+  padding: 0px;
 }
 .logophoto{
   width: 80px;
@@ -27,6 +31,7 @@ body{
 }
 .logo-text{
   text-align: center;
+  margin:0px;
 }
 
 .icon-text-wrap{
@@ -35,13 +40,14 @@ body{
   align-items: center;
 }
 .icon-photo{
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   object-fit: contain;
   text-align: center;
 }
 .icon-text{
-  font-size: 20px;
+  font-size: 22
+  px;
   color:black;
 }
 .menu ul{
@@ -62,7 +68,7 @@ body{
   height: 90vh;
   max-height: 800px;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -274,7 +280,7 @@ width: 20%;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+justify-content: space-around;
   align-items: center;
 }
 .groups-header-string{
@@ -293,6 +299,7 @@ width: 20%;
   text-align: center;
   color:000;
   font-size: 28px;
+  margin-top: 15px;
 }
 .groups-level{
   display: flex;
@@ -300,17 +307,23 @@ width: 20%;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 222px;
+  margin-bottom: 100px;
 }
-.dupa{
+.dlc{
   flex:1;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .level-photo1{
   background-image: url("../assets/aqua-car.png");
   background-size: contain;
   background-repeat: no-repeat;
+
 
 }
 .level-photo2{
@@ -337,4 +350,121 @@ width: 20%;
   background-size: contain;
   background-repeat: no-repeat;
 
+}
+.inside-color{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color:white;
+}
+.inside-color p{
+  margin: 0px;
+}
+.animal-icon{
+  width: 60px;
+  height: 80px;
+  object-fit: contain;
+  margin-bottom: 5px;
+
+}
+.animal-age{
+  font-weight: bold;
+  font-size: 35px;
+
+}
+.animal-header{
+  font-size: 35px;
+}
+
+.footer-background{
+  background: url("../assets/footer-back.png");
+  height: 50vh;
+
+  max-height: 800px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+
+}
+.menu-footer{
+  margin-top: 20px;
+}
+.menu-footer ul li{
+  list-style-type: none;
+  color:white;
+  font-size: 21px;
+
+}
+.menu-footer ul a{
+  color: white;
+}
+.about-school-footer{
+  margin-top: 20px;
+}
+.about-school-footer ul li{
+  list-style-type: none;
+  font-size: 21px;
+
+}
+.about-school-footer ul a{
+  color:white;
+}
+#footer-blank{
+  visibility: hidden;
+  font-size: 24px
+}
+.contact-footer{
+  margin-top: 20px;
+}
+.contact-footer ul li{
+  list-style-type: none;
+  color:white;
+  font-size: 21px;
+}
+.fa-phone, .fa-envelope, .fa-home{
+  margin-right: 6px;
+}
+.logo-footer-img{
+  object-fit: contain;
+  width: 150px;
+  height: 150px;
+
+}
+.logo-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+#text-under-logo-footer{
+  text-align: center;
+  color: white;
+  font-size: 15px;
+}
+.header-footer{
+
+  font-size: 24px !important;
+}
+.footer-li{
+  margin-top: 5px;
+}
+.under-footer{
+  width: 100%;
+  height: 47px;
+  background: #FF69B4;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+
+}
+#text-under-footer{
+  margin:0px;
 }
