--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,5 @@
 body{
   font-family: 'Dosis', sans-serif;
-
 }
 
 .navigationwrap{
@@ -39,6 +38,16 @@ body{
   flex-direction: column;
   align-items: center;
 }
+.icon-text-home-wrap{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom:10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top:20px;
+}
 .icon-photo{
   width: 40px;
   height: 40px;
@@ -46,19 +55,32 @@ body{
   text-align: center;
 }
 .icon-text{
-  font-size: 22
-  px;
+  font-size: 18px;
+
   color:black;
+}
+.icon-text-home{
+  color:white;
+  font-size: 18px;
+}
+#li-home-wrap{
+  background: #b3ecff;
+  height: 100%;
+
 }
 .menu ul{
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   margin: 0px;
+  height: 100%;
 }
 .menu ul li{
   list-style-type: none;
   padding: 10px 16px;
+
+
 }
 #section1{
   margin-bottom: 100px;
@@ -109,12 +131,19 @@ body{
 #section-news{
   margin-bottom: 100px;
 }
+
 .news-wrap{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-
+  background: url("../assets/news-wrap.png");
+  background-size: 100% 100%;
+  padding:10px;
+  margin:10px 10px;
+  background-position: center;
+  -webkit-filter: drop-shadow(3px 3px 3px #eee);
+    filter: drop-shadow(3px 3px 3px #eee);
 }
 .data-color-pink{
   color:#FF69B4;
@@ -268,7 +297,7 @@ width: 15%;
 }
 .wave-down{
   position: absolute;
-  bottom: 0px;
+  bottom: -2px;
 }
 .wavephoto-up{
   width: 100%;
@@ -539,4 +568,20 @@ justify-content: space-around;
 }
 #text-under-footer{
   margin:0px;
+}
+/* Start Responsive */
+.hamburger{
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .icon-text-wrap, #li-home-wrap{
+    display: none;
+  }
+  .hamburger{
+    display: block;
+    color:black;
+  }
+.logo{
+  font-size: 0px;
+  padding: 4px;
 }
