--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,6 @@
 body{
   font-family: 'Dosis', sans-serif;
+  overflow-x: hidden;
 }
 
 .navigationwrap{
@@ -118,6 +119,9 @@ body{
   margin-right: 40px;
   margin-bottom: 105px;
 }
+.text-green-div{
+  margin:0px;
+}
 .second-green-back p{
   white-space: pre;
 }
@@ -129,7 +133,7 @@ body{
   width: 100%;
 }
 #section-news{
-  margin-bottom: 100px;
+  margin-bottom: 70px;
 }
 
 .news-wrap{
@@ -343,8 +347,8 @@ width: 20%;
 .three-image-wrap{
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 .students{
   width: 100%;
@@ -499,7 +503,6 @@ justify-content: space-around;
   list-style-type: none;
   color:white;
   font-size: 21px;
-
 }
 .menu-footer ul a{
   color: white;
@@ -573,7 +576,7 @@ justify-content: space-around;
 .hamburger{
   display: none;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width:600px) {
   .icon-text-wrap, #li-home-wrap{
     display: none;
   }
@@ -585,3 +588,200 @@ justify-content: space-around;
   font-size: 0px;
   padding: 4px;
 }
+.background-image{
+  background: url("../assets/background.png");
+  height: 90vh;
+  max-height: 450px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  color: white;
+  position: relative;
+}
+.first-green-back{
+  background: #80ff00;
+  font-size: 18px;
+  padding: 7px 9px;
+  margin-right: 30px;
+  margin-bottom: 10px;
+
+}
+.second-green-back{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: #80ff00;
+  font-size: 35px;
+  font-weight: bold;
+  padding: 6px 25px;
+  margin-right: 30px;
+  margin-bottom: 50px;
+}
+.wave{
+  position: absolute;
+  bottom: -7px;
+}
+#section-news{
+  margin-bottom: 10px;
+}
+
+.text-beetwen-lines{
+  font-size: 37px;
+  font-weight: bold;
+  padding: 0px 13px;
+}
+.about-text{
+  font-size: 19px;
+  font-weight: lighter;
+  margin-top:20px;
+}
+.button1{
+  border-radius: 50px;
+  padding: 5px 35px;
+  font-weight: bold;
+  font-size: 19px;
+  white-space: nowrap;
+}
+.kid-background{
+  background: url("../assets/kid-back.png");
+  height: 90vh;
+  max-height: 500px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  flex-direction: column;
+}
+.wave-up{
+  position: absolute;
+  top: -9px;
+}
+.wave-down{
+  position: absolute;
+  bottom: -7px;
+}
+.text-beetwen-lines-team{
+  font-size: 40px;
+  font-weight: bold;
+  padding: 0px 13px;
+  color:white;
+}
+.p-under-header{
+  color:white;
+  font-size: 17px;
+  text-align: center;
+}
+.images > img {
+  width: 80px;
+  margin: 5px 35px;
+}
+.images{
+  width:33%;
+}
+
+.team-desc {
+  text-align: center;
+  font-weight: bold;
+  font-size: 15px;
+}
+.work-text{
+  font-weight: normal;
+  color:#80ff00;
+}
+.whole-team-text{
+
+  z-index: 4;
+  margin-top: 50px;
+}
+.whole-team-text-link{
+  color: #80ff00;
+  font-size: 15px;
+}
+.text-under-zigzak{
+  text-align: center;
+  color:000;
+  font-size: 13px;
+  margin-top: 15px;
+}
+.groups-level{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 130px;
+  margin-bottom: 100px;
+}
+.dlc{
+  flex:1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.level-photo1{
+  background-image: url("../assets/aqua-car.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+
+}
+.level-photo2{
+  background-image: url("../assets/blue-car.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+
+}
+.level-photo3{
+  background-image: url("../assets/orange-car.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+}
+.level-photo4{
+  background-image: url("../assets/green-car.png");
+background-size: cover;
+  background-repeat: no-repeat;
+
+}
+.level-photo5{
+  background-image: url("../assets/yellow-car.png");
+background-size: cover;
+  background-repeat: no-repeat;
+
+}
+.inside-color{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color:white;
+}
+.inside-color p{
+  margin: 0px;
+}
+.animal-icon{
+  width: 30px;
+  height: 50px;
+  object-fit: contain;
+  margin-bottom: 5px;
+
+}
+.animal-age{
+  font-weight: bold;
+  font-size: 15px;
+
+}
+.animal-header{
+  font-size: 15px;
+}}
