--- a/css/css.css
+++ b/css/css.css
@@ -588,6 +588,12 @@ justify-content: space-around;
   font-size: 0px;
   padding: 4px;
 }
+
+  .navigationwrap.responsive ul li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 .background-image{
   background: url("../assets/background.png");
   height: 90vh;
@@ -710,13 +716,25 @@ justify-content: space-around;
   font-size: 13px;
   margin-top: 15px;
 }
+.fun-background{
+  background: url("../assets/fun.png");
+  height: 90vh;
+  max-height: 500px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+justify-content: space-around;
+  align-items: center;
+}
 .groups-level{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 130px;
+  height: 102px;
   margin-bottom: 100px;
 }
 .dlc{
@@ -784,4 +802,79 @@ background-size: cover;
 }
 .animal-header{
   font-size: 15px;
+}
+.footer-background{
+  background: url("../assets/footer-back.png");
+  height: 80vh;
+  max-height: 800px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.menu-footer ul li{
+  list-style-type: none;
+  color:white;
+  font-size: 10px;
+}
+.menu-footer ul a{
+  color: white;
+}
+
+.about-school-footer ul li{
+  list-style-type: none;
+  font-size: 10px;
+
+}
+.about-school-footer ul a{
+  color:white;
+}
+#footer-blank{
+  visibility: hidden;
+  font-size: 10px
+}
+
+.contact-footer ul li{
+  list-style-type: none;
+  color:white;
+  font-size: 10px;
+}
+
+.logo-footer-img{
+  object-fit: contain;
+  width: 70px;
+  height: 70px;
+
+}
+
+#text-under-logo-footer{
+  text-align: center;
+  color: white;
+  font-size: 7px;
+}
+.header-footer{
+
+  font-size: 13px !important;
+}
+.footer-li{
+  margin-top: 5px;
+}
+.under-footer{
+  width: 100%;
+  height: 27px;
+  background: #FF69B4;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+
+}
+#text-under-footer{
+  margin:0px;
 }}
