--- a/css/css.css
+++ b/css/css.css
@@ -290,7 +290,7 @@ body {
 	width: 100%;
 	position: absolute;
 	top: 0px;
-	left: 0px;
+	left: 20px;
 	z-index: -1;
 }
 
@@ -710,7 +710,67 @@ body {
 #mySidebar, #main{
 	display: none;
 }
+/* START ABOUT-KINDER */
+.about-kinder-background{
+	background: url("../assets/background.png");
+	height: 40vh;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+}
+.about-kinder-filter{
+	background: #00FFFF;
+	height: 40vh;
+	width: 100%;
+	opacity: 0.5;
+}
+.background-string{
+	display: flex;
+	flex-direction: row;
+	position: absolute;
+	z-index: 10000;
+}
+.about-kinder-lines{
+	object-fit: contain;
+	width: 120px;
+}
+.about-kinder-header{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.about-kinder{
+	margin-top: 30px;
+}
+#about-kinder-h3{
+	margin-bottom: 30px;
+	font-weight: bold;
+	font-size: 20px;
+}
+/* END ABOUT-KINDER */
+/* START TEAM */
+	.our-team  {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 80px;
+	}
+	#team-string{
+		margin-bottom: 20px;
+	}
+/* END TEAM */
+/* START KONCEPCJA  */
+#koncepcja-header{
+	text-align: center;
+	font-size: 25px;
+}
 
+/* END KONCEPCJA */
 /* xlarge devices - screen width equal to or greater than 1200px */
 
 /* Navigation */
@@ -1117,8 +1177,53 @@ body {
 	}
 }
 @media screen and (max-width:644px){
+	.groups-level {
+  	width: 99%;
+  	height: 142.36px;
+  }
+  .dlc {
+  	width: 100%;
+  	height: 100%;
+  }
+	.animal-icon {
+		width: 27px;
+		height: 37px;
+	}
+	.animal-age {
+		font-size: 13px;
+	}
+	.animal-header {
+		font-size: 13px;
+	}
+}
+@media screen and (max-width:644px){
 	.images>img {
 		width: 80px;
+	}
+}
+@media screen and (max-width:608px){
+	.groups-level {
+		width: 99%;
+		height: 142.36px;
+	}
+	.dlc {
+		width: 100%;
+		height: 100%;
+	}
+	.animal-icon {
+		width: 24px;
+		height: 34px;
+	}
+	.animal-age {
+		font-size: 12px;
+	}
+	.animal-header {
+		font-size: 12px;
+	}
+}
+@media screen and (max-width:599px){
+	.wave-up{
+		top: -8.9px;
 	}
 }
 @media screen and (max-width:596px){
@@ -1327,6 +1432,57 @@ body {
 		font-size: 11px;
 	}
 }
+@media screen and (max-width:575px){
+	.groups-level {
+		width: 100%;
+		height: 106px;
+	}
+	.dlc {
+		width: 100%;
+		height: 100%;
+	}
+
+	.animal-icon {
+		width: 24px;
+		height: 38px;
+	}
+
+	.animal-age {
+		font-size: 13px;
+	}
+
+	.animal-header {
+		font-size:13px;
+	}
+}
+@media screen and (max-width:483px){
+	.groups-level {
+		width: 100%;
+		height: 87.9px;
+	}
+	.dlc {
+		width: 100%;
+		height: 100%;
+	}
+
+	.animal-icon {
+		width: 20px;
+		height: 35px;
+	}
+
+	.animal-age {
+		font-size: 8px;
+	}
+
+	.animal-header {
+		font-size: 8px;
+	}
+}
+@media screen and (max-width:482px){
+	.wave-up{
+		top:-9.7px;
+	}
+}
 @media screen and (max-width:466px){
 	.wave-up{
 		top:-10px;
@@ -1507,7 +1663,8 @@ body {
 		align-items: flex-start;
 	}
 }
-@media screen and (max-width:445px)
+
+
 @media screen and (max-width:445px){
 	.groups-level {
 		width: 100%;
